<resources>
    <string name="app_name">my PA app</string>
    <string name="home">home</string>
    <string name="settings">Settings</string>
    <string name="review">Review</string>
    <string name="start">Start</string>
    <string name="info">Info</string>
    <string name="calibrate">Calibrate</string>
    <string name="title_activity_login">Sign in</string>
    <string name="Bluetooth">Turn on/off Bluetooth</string>
    <string name="welcome">Welcome to the panic attack management app</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="this_is_the_exercise_screen">this is the exercise screen</string>
    <string name="Quickstart">Quickstart</string>
    <string name="Analysis">Analysis</string>
    <string name="Resources">Resources</string>
    <string name="Exercises">Exercises</string>

    //links for the resources screen
    <string name="info1">https://www.nimh.nih.gov/health/publications/panic-disorder-when-fear-overwhelms/index.shtml</string>
    <string name="info2">https://findtreatment.samhsa.gov/</string>
    <string name="info3">https://clinicaltrials.gov/ct2/show/NCT02826096</string>
    <string name="info4"></string>

    <string name="resourceInstructions">Click on these links to find out more about panic attacks and biofeedback therapy:</string>

    //button names for exercise screen
    <string name="startExercise">Start Exercises</string>
    <string name="reviewExercise">Review Exercise History</string>
    <string name="exerciseInstructions">Exercise Instructions</string>
    <string name="exerciseReminder">Set Reminder</string>

    //strings on the review screen
    @string/reviewPrompt
    <string name="reviewPrompt">Select the measurements you want to view, and enter the start and end dates:</string>
    <string name="checkBoxHR">Heart Rate (beats per minute)</string>
    <string name="checkBoxGSR">Galvanic Skin Response (scale from 1-10)</string>
    <string name="checkBoxRR">Respiration Rate (breaths per minute)</string>
    <string name="checkBoxActivity">Overall Activity Level (scale from 1-10)</string>
    <string name="startDate">Start Date: </string>
    <string name="endDate">End Date: </string>
    <string name="okay">OK</string>

    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>

    <string name="bleconnect">BLE Connection</string>
    <string name="data">data</string>
</resources>
