<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="25dp">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/StartBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Quickstart" />

        <Button
            android:id="@+id/ReviewBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Analysis" />

        <Button
            android:id="@+id/ResourcesBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Resources" />

        <Button
            android:id="@+id/SettingsBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings" />

        <Button
            android:id="@+id/ExerciseBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Exercises" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>