<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReviewScreen">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/reviewPrompt"
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:text="@string/reviewPrompt"
            android:textColor="@color/colorPrimaryDark" />

        <CheckBox
            android:id="@+id/checkBoxHR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkBoxHR"
            android:checked="false"
            android:onClick="onCheckboxClicked"/>

        <CheckBox
            android:id="@+id/checkBoxGSR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkBoxGSR"
            android:checked="false"
            android:onClick="onCheckboxClicked"/>


        <CheckBox
            android:id="@+id/checkBoxRR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkBoxRR"
            android:checked="false"
            android:onClick="onCheckboxClicked"/>

        <CheckBox
            android:id="@+id/checkBoxActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkBoxActivity"
            android:checked="false"
            android:onClick="onCheckboxClicked"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/startDateTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/startDate" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:autofillHints="@string/startDate"
                android:inputType="date" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/endDateTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/endDate" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:autofillHints="@string/endDate"
                android:inputType="date" />
        </LinearLayout>

        <Button
            android:id="@+id/okayBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/okay" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>