<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResourcesScreen">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/ResourcesInstructions"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/resourceInstructions"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:id="@+id/InfoURL1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:autoLink="web"
            android:text="@string/info1"
            android:textColorLink="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/InfoURL2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:autoLink="web"
            android:text="@string/info2"
            android:textColorLink="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/InfoURL3"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:autoLink="web"
            android:text="@string/info3"
            android:textColorLink="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/InfoURL4"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/info4" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>